css/style.css
html {
  height: 100%;
}
body {
  background-color: #42729B;
  color: white;
  height: 100%;
}

section {
  min-height: 100vh;
}

nav {
  background-color: #42729B;
  box-shadow: none;
}
ul li {
  margin-top: 3vh;
}
ul li:last-child {
  margin-right: 5vh;
}

nav ul a {
  padding: 0px;
}

nav ul a:hover {
  background-color: transparent;
}

.logo {
  height:100%;
  width:15%;
}
.iphone {
  width: 35% !important;
}

.brand-logo {
  margin-top: 3vh;
  margin-left: 10vh;
}

.description {
  width: 65% !important;
}
.app-description-container {
  margin-top: 10vh;
}

h1 {
  text-align: center;
}

h2 {
  text-align: center;
}

h3 {
  text-align: center;
}
h4 {
  text-align: center;
}
h5 {
  text-align: center;
}

.btn {
  background-color: #7ACDC8;
}


.icons {
  text-align: center;
}

.social {
  /*padding: 10px 10px 10px 10px;*/
  text-align: center;
  width: 50%;
}

.appstore {
  margin: 2vh;  
text-align: center;
}

input#email{
  border: 5px solid #eee ;
  background-color: white;
  text-align: center;
  color: #9DA2A5;
}

.how-to {
  text-align: center;
}

.how-to-row {
  height: 100vh;
  display: table;
}
.vertical-align {
  display: table-cell;
  vertical-align: middle;
}
.img-wrapper {
  padding: 3vh;
}

.width {
  max-width: 45% !important;
}
.safety-icons {
  text-align: center;
}

.safety-icons-description {
  /*background-color: white;*/
  text-align: center;
}
footer.page-footer {
  background-color: #9DA2A5;
}
.footer-copyright {
  background-color: #9DA2A5;
}

footer.page-footer .footer-copyright {
  background-color: none;
}
.footer-icon {
  width: 5%;
}

